--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "duckdb==1.3.2",
     "httpx==0.27.0",
     "musicbrainzngs==0.7.1",
+    "plotly>=5.17.0",
     "polars-lts-cpu>=1.34.0b1",
     "pyarrow>=21.0.0",
     "pycountry>=24.6.1",
@@ -19,6 +20,7 @@ dependencies = [
     "requests==2.32.5",
     "rich==13.7.0",
     "sentry-sdk>=2.48.0",
+    "streamlit>=1.52.2",
     "structlog==24.1.0",
     "websockets>=15.0.1",
 ]
