add tracks played from navidrome

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@ SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 SPOTIFY_REFRESH_TOKEN=your_spotify_refresh_token
 
+# ListenBrainz/Navidrome Configuration (Optional)
+# Required for ingesting play history from Navidrome via ListenBrainz
+LB_API_ROOT=https://api.listenbrainz.org/1
+LB_USER=your_listenbrainz_username
+LB_TOKEN=your_listenbrainz_token
+TEST_MODE=false  # Set to true to only fetch last 24 hours
+
 # OpenWeather API Credentials (Optional)
 OPENWEATHER_API_KEY=your_openweather_api_key
 
